--- a/BugTrackerUI/Pages/NewBug.razor
+++ b/BugTrackerUI/Pages/NewBug.razor
@@ -1,9 +1,9 @@
 ﻿@page "/new-bug"
 <h3>Add New Bug</h3>
 <EditForm Model="AddBug">
-    <InputText @bind-value="@AddBug.Title" placeholder="Enter Title"/>
-    <InputText @bind-value="@AddBug.Description" placeholder="Enter Description"/>
-    <InputNumber @bind-value="@AddBug.Priority" placeholder="Enter Priority"></InputNumber>
+    <InputText @bind-Value="@AddBug.Title" placeholder="Enter Title"/>
+    <InputText @bind-Value="@AddBug.Description" placeholder="Enter Description"/>
+    <InputNumber @bind-Value="@AddBug.Priority" placeholder="Enter Priority"></InputNumber>
 
     <button type="submit">Add Bug</button>
 </EditForm>
