Added BugService and HandleSubmit

--- a/BugTrackerUI/Pages/NewBug.razor
+++ b/BugTrackerUI/Pages/NewBug.razor
@@ -1,6 +1,6 @@
 ﻿@page "/new-bug"
 <h3>Add New Bug</h3>
-<EditForm Model="AddBug">
+<EditForm Model="AddBug" OnValidSubmit="@HandleValidSubmit">
     <InputText @bind-Value="@AddBug.Title" placeholder="Enter Title"/>
     <InputText @bind-Value="@AddBug.Description" placeholder="Enter Description"/>
     <InputNumber @bind-Value="@AddBug.Priority" placeholder="Enter Priority"></InputNumber>
@@ -9,5 +9,18 @@
 </EditForm>
 
 @code {
+    [Inject]
+    public NavigationManager NavService { get; set; }
+    
+    [Inject]
+    public IBugService BugService { get; set; }
+    
     public Bug AddBug { get; set; } = new Bug();
+
+    protected void HandleValidSubmit()
+    {
+        BugService.AddBug(AddBug);
+        
+        NavService.NavigateTo("");
+    }
 }
