--- a/BugTrackerUI/Pages/NewBug.razor
+++ b/BugTrackerUI/Pages/NewBug.razor
@@ -1,6 +1,8 @@
 ﻿@page "/new-bug"
+
 <h3>Add New Bug</h3>
-<EditForm Model="AddBug" OnValidSubmit="@HandleValidSubmit">
+
+<EditForm Model="AddBug" OnValidSubmit="HandleValidSubmit">
     <InputText @bind-Value="@AddBug.Title" placeholder="Enter Title"/>
     <InputText @bind-Value="@AddBug.Description" placeholder="Enter Description"/>
     <InputNumber @bind-Value="@AddBug.Priority" placeholder="Enter Priority"></InputNumber>
@@ -20,7 +22,6 @@
     protected void HandleValidSubmit()
     {
         BugService.AddBug(AddBug);
-        
         NavService.NavigateTo("");
     }
 }
