--- a/BugTrackerUI/Pages/NewBug.razor
+++ b/BugTrackerUI/Pages/NewBug.razor
@@ -3,6 +3,8 @@
 <h3>Add New Bug</h3>
 
 <EditForm Model="AddBug" OnValidSubmit="HandleValidSubmit">
+    <DataAnnotationsValidator/>
+    <ValidationSummary/>
     <InputText @bind-Value="@AddBug.Title" placeholder="Enter Title"/>
     <InputText @bind-Value="@AddBug.Description" placeholder="Enter Description"/>
     <InputNumber @bind-Value="@AddBug.Priority" placeholder="Enter Priority"></InputNumber>
@@ -11,12 +13,13 @@
 </EditForm>
 
 @code {
+
     [Inject]
     public NavigationManager NavService { get; set; }
-    
+
     [Inject]
     public IBugService BugService { get; set; }
-    
+
     public Bug AddBug { get; set; } = new Bug();
 
     protected void HandleValidSubmit()
@@ -24,4 +27,5 @@
         BugService.AddBug(AddBug);
         NavService.NavigateTo("");
     }
+
 }
