Removed .idea folder and Added Docker Support and .NET 6

--- a/BugTrackerUI/Pages/NewBug.razor
+++ b/BugTrackerUI/Pages/NewBug.razor
@@ -1,4 +1,5 @@
 ﻿@page "/new-bug"
+@using BugTrackerUI.Services
 
 <h3>Add New Bug</h3>
 
@@ -20,7 +21,7 @@
     [Inject]
     public IBugService BugService { get; set; }
 
-    public Bug AddBug { get; set; } = new Bug();
+    public Bug AddBug { get; set; } = new();
 
     protected void HandleValidSubmit()
     {
